testdata/baselines/reference/submodule/conformance/emptyVariableDeclarationBindingPatterns01_ES6.errors.txt
error TS2318: Cannot find global type 'Array'.
error TS2318: Cannot find global type 'Function'.
error TS2318: Cannot find global type 'IArguments'.
error TS2318: Cannot find global type 'RegExp'.
error TS2318: Cannot find global type 'String'.
error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
error TS2552: Cannot find name 'Number'. Did you mean 'number'?
error TS2552: Cannot find name 'Object'. Did you mean 'object'?
emptyVariableDeclarationBindingPatterns01_ES6.ts(31,20): error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.


!!! error TS2318: Cannot find global type 'Array'.
!!! error TS2318: Cannot find global type 'Function'.
!!! error TS2318: Cannot find global type 'IArguments'.
!!! error TS2318: Cannot find global type 'RegExp'.
!!! error TS2318: Cannot find global type 'String'.
!!! error TS2552: Cannot find name 'Boolean'. Did you mean 'boolean'?
!!! error TS2552: Cannot find name 'Number'. Did you mean 'number'?
!!! error TS2552: Cannot find name 'Object'. Did you mean 'object'?
==== emptyVariableDeclarationBindingPatterns01_ES6.ts (1 errors) ====
    (function () {
        var a: any;
    
        var {} = a;
        let {} = a;
        const {} = a;
    
        var [] = a;
        let [] = a;
        const [] = a;
    
        var {} = a, [] = a;
        let {} = a, [] = a;
        const {} = a, [] = a;
    
        var { p1: {}, p2: [] } = a;
        let { p1: {}, p2: [] } = a;
        const { p1: {}, p2: [] } = a;
    
        for (var {} = {}, {} = {}; false; void 0) {
        }
    
        function f({} = a, [] = a, { p: {} = a} = a) {
            return ({} = a, [] = a, { p: {} = a } = a) => a;
        }
    })();
    
    (function () {
        const ns: number[][] = [];
    
        for (var {} of ns) {
                       ~~
!!! error TS2488: Type '{}' must have a '[Symbol.iterator]()' method that returns an iterator.
        }
    
        for (let {} of ns) {
        }
    
        for (const {} of ns) {
        }
    
        for (var [] of ns) {
        }
    
        for (let [] of ns) {
        }
    
        for (const [] of ns) {
        }
    })();